# jamesjmeyer.dev

./: .gitignore  README.md
site/: Cargo.toml
site/resource/: index.html
site/resource/blog/: actix_sqlx_crud.md
site/resource/blogs/: building_a_blog_site_with_rust.md  security_design_patterns.md
site/resource/html/: contact.html  resume.html
site/resource/js/: contact.js  navbar.js
site/resource/js/crypto/: console-input-2021-2-11_14-19-55.js  cypher.js  email.js
site/src/: controller.rs  lib.rs  main.rs  resource.rs
site/src/controller/: blog.rs  contact.rs  index.rs  mod.rs  resource.rs  resume.rs
site/src/service/: mod.rs
site/static/js/: navbar.js
